# enterprise-statistical-business-intelligence-platform-DS-2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_PLAN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  statistical-bi-platform-master-prompt-v2.md
.github/workflows/: ci.yml
docs/: architecture.md
tests/: test_project_structure.py
