[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statistical-bi-platform"
version = "0.1.0"
description = "Enterprise Statistical Business Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.9",
    "plotly>=5.24",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
include = [
    "config*",
    "core*",
    "analytics*",
    "statistics*",
    "forecasting*",
    "streaming*",
    "visualization*",
    "services*",
    "pipelines*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
